fix: minor layout issues

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
 		@apply font-roboto text-base font-medium text-primary landscape:text-xl;
 	}
 	h3 {
-		@apply font-roboto text-sm font-medium text-primary landscape:text-base;
+		@apply font-roboto text-sm text-primary landscape:text-base;
 	}
 	p {
 		@apply font-jet text-xs font-extralight text-secondary landscape:text-base;
